<resources>
    <string name="app_name">Takaful Morni</string>
    <string name="get_currentuser_error">Getting current user error .</string>
    <string name="error_401" translatable="false">Unauthorized</string>
    <string name="error_404" translatable="false">Not found</string>
    <string name="error_400" translatable="false">Fail</string>
    <string name="txt_enter_phone">Enter your phone number</string>
    <string name="txt_need_login">You need to login to Morni in order to use services</string>
    <string name="txt_login">Login</string>
    <string name="title_sign">Sign in</string>
    <string name="msg_phone_number_required">Please Enter Your Phone Number</string>
    <string name="msg_phone_number_invalid">Please enter valid phone number</string>
    <string name="txt_example_phone_number">Ex: 05XXXXXXXX</string>
    <string name="title_verify_account">Verify Account</string>
    <string name="txt_verification_code">Enter Verification Code</string>
    <string name="txt_enter_verification_code">Please enter your verification code</string>
    <string name="txt_send">Send</string>
    <string name="txt_did_not_receive">Did not receive code?</string>
    <string name="txt_resend">Resend</string>
    <string name="msg_code_invalid">Verification code is invalid</string>
    <string name="title_activity_create_order_map_fragment">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_home">Home</string>
    <string name="msg_location_permission_denied">Permission is denied. You need accept it to get your location.</string>
    <string name="msg_camera_permission_denied">Permission is denied. You need accept it to use camera.</string>
    <string name="msg_current_location">Current Location</string>
    <string name="title_activity_maps_activitytestttttt">Map</string>
    <string name="btn_txt_request">Request</string>
    <string name="btn_txt_hide">Hide</string>
    <string name="msg_try_again">Please try again later.</string>
    <string name="msg_try_log_out_again">Please try to log out again.</string>
    <string name="waiting_message">We Are Now Searching For An Available Provider</string>
    <string name="order_confirm_msg">Your Order will be canceled, Are you sure?</string>
    <string name="msg_sent_successfully">Request is sent successfully</string>
    <string name="cancel_Order">Cancel Order</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">YES</string>
    <string name="log_out">LOG OUT</string>
    <string name="confirmation_msg">Confirmation Message</string>
    <string name="log_out_confirm_msg">Are you sure you want to log out?</string>
    <string name="title_edt_hint">5xxxxxxx</string>
    <string name="error_503">No Internet connection. Please check your connection.</string>
    <string name="msg_unknown_error">Please check your internet connection and try again.</string>
    <string name="waiting_toolbar_title">Waiting For Provider</string>
    <string name="in_route">In Route</string>
    <string name="call_provider">Call Provider</string>
    <string name="contact_us">Contact Us</string>
    <string name="caneled_succ">Your Order Canceled, thanks</string>
    <string name="photo_updated">Photo Uploaded, Thanks</string>
    <string name="photo_upload_fail">Photo is not uploaded</string>
    <string name="error_408">Time out, try again later.</string>
    <string name="msg_gps_disabled_asking">GPS is disabled, do you want to turn in on?</string>
    <string name="msg_gps_disabled">GPS is disabled.</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>
    <string name="msg_turn_on">TURN ON</string>
    <string name="error_422">Something went wrong. Try again later</string>
    <string name="msg_something_went_wrong">Something went wrong. Try again later</string>
    <string name="msg_phone_permission_denied">Please give phone permission.</string>
    <string name="invalid_phone_number">phone number is not available at this time</string>
</resources>
