<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/AppBgGray">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_80_dp"
        android:gravity="center"
        android:text="@string/txt_verification_code"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/dim_18_sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dim_10_dp"
        android:text="@string/txt_enter_verification_code"
        android:textSize="@dimen/dim_16_sp" />

    <TextView
        android:id="@+id/txt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dim_16_sp"
        android:gravity="center"
        android:layout_marginTop="@dimen/dim_10_dp"
        android:text="test"/>

    <EditText
        android:id="@+id/edt_verification_code"
        android:layout_width="@dimen/dim_80_dp"
        android:layout_height="@dimen/dim_40_dp"
        android:layout_marginEnd="@dimen/dim_10_dp"
        android:layout_marginStart="@dimen/dim_10_dp"
        android:layout_marginTop="@dimen/dim_15_dp"
        android:background="@drawable/bg_white"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4" />

    <Button
        android:id="@+id/btn_send_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_14_dp"
        android:layout_marginStart="@dimen/dim_24_dp"
        android:layout_marginEnd="@dimen/dim_24_dp"
        android:background="@color/colorPrimary"
        android:text="@string/txt_send"
        android:textColor="@color/White"
        />

    <TextView
        android:id="@+id/txt_count_down_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/dim_10_dp"
        android:layout_marginStart="@dimen/dim_10_dp"
        android:layout_marginTop="@dimen/dim_12_dp"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/layout_resend_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dim_15_dp"
        android:gravity="center"
        android:visibility="invisible">

        <TextView
            android:id="@+id/txt_did_not_recieve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_did_not_receive"/>
        <TextView
            android:id="@+id/txt_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_resend"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="@dimen/dim_4_dp" />

    </LinearLayout>


</LinearLayout>